--- a/13-nlp/py/L13 N3 Text Classification.ipynb
+++ b/13-nlp/py/L13 N3 Text Classification.ipynb
@@ -4,24 +4,297 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Missing:\n",
+    "# Classification on the Twenty Newsgroup\n",
     "\n",
-    "* Text and explanations\n",
-    "* Pipeline intro\n",
-    "* SVM as SVC not SGD\n",
-    "* GridSearch on pipeline"
+    "\n",
+    "*The [20 Newsgroups dataset](http://qwone.com/~jason/20Newsgroups/) is a collection of approximately 20,000 newsgroup documents, partitioned (nearly) evenly across 20 different newsgroups. \n",
+    "\n",
+    "The 20 newsgroups collection is a popular data set for experiments in text applications of machine learning techniques, such as text classification and text clustering.*\n",
+    "\n",
+    "# 1. Import and inspect the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "import numpy as np\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "categories = ['sci.space','comp.graphics', 'sci.med', 'rec.motorcycles', 'rec.sport.baseball']\n",
+    "twenty_train = fetch_20newsgroups(subset='train',  categories=categories, shuffle=True, random_state=42)\n",
+    "\n",
+    "twenty_train.target_names\n",
+    "len(twenty_train.data)\n",
+    "\n",
+    "# test data\n",
+    "twenty_test = fetch_20newsgroups(subset='test',categories=categories, shuffle=True, random_state=42)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rec.sport.baseball\n",
+      "From: rkoffler@ux4.cso.uiuc.edu (Bighelmet)\n",
+      "Subject: Re: Best Sportwriters...\n",
+      "Keywords: Sportswriters\n",
+      "Organization: University of Illinois at Urbana\n",
+      "Lines: 21\n",
+      "\n",
+      "csc2imd@cabell.vcu.edu (Ian M. Derby) writes:\n",
+      "\n",
+      "\n",
+      ">Since someone brought up sports radio, howabout sportswriting???\n",
+      "\n",
+      "I happen to be a big fan of Jayson Stark.  He is a baseball writer for the \n",
+      "Philadelphia Inquirer.  Every tuesday he writes a \"Week in Review\" column.  \n",
+      "He writes about unusual situations that occured during the week.  Unusual\n",
+      "stats.  He has a section called \"Kinerisms of the Week\" which are stupid\n",
+      "lines by Mets brodcaster Ralph Kiner.  Every year he has the LGTGAH contest.\n",
+      "That stands for \"Last guy to get a hit.\"  He also writes for Baseball \n",
+      "America.  That column is sort of a highlights of \"Week in Review.\"  If you \n",
+      "can, check his column out sometime.  He might make you laugh.\n",
+      "\n",
+      "Rob Koffler\n",
+      "\n",
+      "-- \n",
+      "******************************************************************\n",
+      "|You live day to day and                rkoffler@ux4.cso.uiuc.edu|\n",
+      "|dream about tomorrow --Don Henley                               |\n",
+      "******************************************************************\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(twenty_train.target_names[twenty_train.target[1]])\n",
+    "print(twenty_train.data[1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification on the Twenty Newsgroup\n",
+    "# 2. Extract features from data\n",
     "\n",
+    "Transform the *twenty_train.data* with \n",
+    "* CountVectorizer\n",
     "\n",
-    "*The 20 Newsgroups data set is a collection of approximately 20,000 newsgroup documents, partitioned (nearly) evenly across 20 different newsgroups. The 20 newsgroups collection is a popular data set for experiments in text applications of machine learning techniques, such as text classification and text clustering.*\n",
+    "Then apply\n",
+    "* TfidfTransformer\n",
+    "\n",
+    "Check the output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2966, 1000)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count words\n",
+    "count_vect = CountVectorizer(stop_words = 'english', max_features= 1000)\n",
+    "X_train_counts = count_vect.fit_transform(twenty_train.data)\n",
+    "X_train_counts.shape\n",
+    "\n",
+    "# Frequency tf-idf\n",
+    "\n",
+    "tfidf_transformer = TfidfTransformer()\n",
+    "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
+    "X_train_tfidf.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Fit a model and predict some sentences\n",
+    "\n",
+    "* Fit a Multinomial Model to the output of the CountVectorizer and TfidfTransformer\n",
+    "* Predict some sentences with \n",
+    "* MultinomialNB \n",
+    "\n",
+    "For instance:\n",
+    "\n",
+    "        new_sentences = ['Space the final frontier ', 'OpenGL on the GPU is fast', \n",
+    "            'I bought my new honda at the local dealer ', \n",
+    "            ]\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Fit the model on X_train_tfidf\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "new_sentences = ['Space the final frontier ', 'OpenGL on the GPU is fast', \n",
+    "            'I bought my new honda at the local dealer ', \n",
+    "            ]\n",
+    "# Transform the sentences and predict the categories\n",
+    "\n",
+    "\n",
+    "# predicted_categories = ...\n",
+    "\n",
+    "# and print\n",
+    "for doc, category in zip(new_sentences, predicted_categories):\n",
+    "    print('%r => %s' % (doc, twenty_train.target_names[category]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Pipelines\n",
+    "\n",
+    "Let's build a pipeline with\n",
+    "\n",
+    "* CountVectorizer\n",
+    "* TfidfTransormer\n",
+    "* MultinomialNB\n",
+    "\n",
+    "        from sklearn.pipeline import Pipeline\n",
+    "        text_clf = Pipeline([('vect', CountVectorizer()),\n",
+    "                     ('tfidf', TfidfTransformer()),\n",
+    "                     ('clf', MultinomialNB()),\n",
+    "        ])\n",
+    "\n",
+    "Fit the Pipeline on the twenty_train.train data and predict on the twenty_train.test data \n",
+    "\n",
+    "Assess the prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Different Classifier\n",
+    "\n",
+    "Try changing the classifier to the [Stochastic Gradient Classifier](http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.SGDClassifier.html) with\n",
+    "\n",
+    "* loss='hinge', \n",
+    "* penalty='l2',\n",
+    "* alpha=1e-3\n",
+    "* n_iter=5\n",
+    "\n",
+    "Model assessment on test data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# 6. GridSearch on pipeline\n",
+    "\n",
+    "        from sklearn.grid_search import GridSearchCV\n",
+    "        parameters = {'vect__ngram_range': [(1, 1), (1, 2)],\n",
+    "                      'tfidf__use_idf': (True, False),\n",
+    "                      'clf__alpha': (1e-2, 1e-3),\n",
+    "        }\n",
+    "        gs_clf = GridSearchCV(text_clf, parameters, n_jobs=-1)\n",
+    "\n",
+    "fit on twenty_train.data, twenty_train.target, and look at grid scores\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -31,290 +304,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2257"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.datasets import fetch_20newsgroups\n",
-    "\n",
-    "categories = ['alt.atheism', 'soc.religion.christian','comp.graphics', 'sci.med']\n",
-    "twenty_train = fetch_20newsgroups(subset='train',  categories=categories, shuffle=True, random_state=42)\n",
-    "\n",
-    "\n",
-    "twenty_train.target_names\n",
-    "len(twenty_train.data)\n",
-    "twenty_train.filenames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "comp.graphics\n",
-      "From: sd345@city.ac.uk (Michael Collier)\n",
-      "Subject: Converting images to HP LaserJet III?\n",
-      "Nntp-Posting-Host: hampton\n",
-      "Organization: The City University\n",
-      "Lines: 14\n",
-      "\n",
-      "Does anyone know of a good way (standard PC application/PD utility) to\n",
-      "convert tif/img/tga files into LaserJet III format.  We would also like to\n",
-      "do the same, converting to HPGL (HP plotter) files.\n",
-      "\n",
-      "Please email any response.\n",
-      "\n",
-      "Is this the correct group?\n",
-      "\n",
-      "Thanks in advance.  Michael.\n",
-      "-- \n",
-      "Michael Collier (Programmer)                 The Computer Unit,\n",
-      "Email: M.P.Collier@uk.ac.city                The City University,\n",
-      "Tel: 071 477-8000 x3769                      London,\n",
-      "Fax: 071 477-8565                            EC1V 0HB.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "print(twenty_train.target_names[twenty_train.target[0]])\n",
-    "print(twenty_train.data[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Extracting features from text files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2257, 1000)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Count words\n",
-    "\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "count_vect = CountVectorizer(stop_words = 'english', max_features= 1000)\n",
-    "X_train_counts = count_vect.fit_transform(twenty_train.data)\n",
-    "X_train_counts.shape\n",
-    "\n",
-    "# Frequency tf-idf\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
-    "tfidf_transformer = TfidfTransformer()\n",
-    "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
-    "X_train_tfidf.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "clf = MultinomialNB().fit(X_train_tfidf, twenty_train.target)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Aspirin does not cure cancer ' => sci.med\n",
-      "'OpenGL on the GPU is fast' => comp.graphics\n"
-     ]
-    }
-   ],
-   "source": [
-    "docs_new = ['Aspirin does not cure cancer ', 'OpenGL on the GPU is fast']\n",
-    "X_new_counts = count_vect.transform(docs_new)\n",
-    "X_new_tfidf = tfidf_transformer.transform(X_new_counts)\n",
-    "\n",
-    "predicted = clf.predict(X_new_tfidf)\n",
-    "\n",
-    "for doc, category in zip(docs_new, predicted):\n",
-    "    print('%r => %s' % (doc, twenty_train.target_names[category]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Pipelines\n",
-    "\n",
-    "\n",
-    "from sklearn.pipeline import Pipeline\n",
-    ">>> text_clf = Pipeline([('vect', CountVectorizer()),\n",
-    "...                      ('tfidf', TfidfTransformer()),\n",
-    "...                      ('clf', MultinomialNB()),\n",
-    "... ])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.83488681757656458"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "text_clf = Pipeline([('vect', CountVectorizer()),\n",
-    "                     ('tfidf', TfidfTransformer()),\n",
-    "                     ('clf', MultinomialNB()), ])\n",
-    "text_clf = text_clf.fit(twenty_train.data, twenty_train.target)\n",
-    "import numpy as np\n",
-    "twenty_test = fetch_20newsgroups(subset='test',categories=categories, shuffle=True, random_state=42)\n",
-    "docs_test = twenty_test.data\n",
-    "predicted = text_clf.predict(docs_test)\n",
-    "np.mean(predicted == twenty_test.target)   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9127829560585885"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import SGDClassifier\n",
-    "text_clf = Pipeline([('vect', CountVectorizer()),\n",
-    "                     ('tfidf', TfidfTransformer()),\n",
-    "                     ('clf', SGDClassifier(loss='hinge', penalty='l2',alpha=1e-3, n_iter=5, random_state=42)),\n",
-    "])\n",
-    "_ = text_clf.fit(twenty_train.data, twenty_train.target)\n",
-    "predicted = text_clf.predict(docs_test)\n",
-    "np.mean(predicted == twenty_test.target) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                        precision    recall  f1-score   support\n",
-      "\n",
-      "           alt.atheism       0.95      0.81      0.87       319\n",
-      "         comp.graphics       0.88      0.97      0.92       389\n",
-      "               sci.med       0.94      0.90      0.92       396\n",
-      "soc.religion.christian       0.90      0.95      0.93       398\n",
-      "\n",
-      "           avg / total       0.92      0.91      0.91      1502\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[258,  11,  15,  35],\n",
-       "       [  4, 379,   3,   3],\n",
-       "       [  5,  33, 355,   3],\n",
-       "       [  5,  10,   4, 379]])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn import metrics\n",
-    "print(metrics.classification_report(twenty_test.target, predicted,target_names=twenty_test.target_names))\n",
-    "\n",
-    "metrics.confusion_matrix(twenty_test.target, predicted)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.grid_search import GridSearchCV\n",
-    "parameters = {'vect__ngram_range': [(1, 1), (1, 2)],\n",
-    "              'tfidf__use_idf': (True, False),\n",
-    "              'clf__alpha': (1e-2, 1e-3),\n",
-    "}\n",
-    "gs_clf = GridSearchCV(text_clf, parameters, n_jobs=-1)"
-   ]
   }
  ],
  "metadata": {
