--- a/13-nlp/py/L13 N3 Text Classification.ipynb
+++ b/13-nlp/py/L13 N3 Text Classification.ipynb
@@ -31,10 +31,7 @@
     "from sklearn.linear_model import SGDClassifier\n",
     "\n",
     "\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "import numpy as np\n",
-    "\n"
+    "from sklearn.pipeline import Pipeline\n"
    ]
   },
   {
