--- a/13-nlp/py/L13 N2 Sentiment Prediction.ipynb
+++ b/13-nlp/py/L13 N2 Sentiment Prediction.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -62,10 +62,10 @@
     {
      "data": {
       "text/plain": [
-       "(499, 3)"
+       "(1499, 3)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,13 +73,13 @@
    "source": [
     "# limit size of data to 500 reviews\n",
     "\n",
-    "df = df_original[0:499]\n",
+    "df = df_original[0:1499]\n",
     "df.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
        "'\"The film starts with a manager (Nicholas Bell) giving welcome investors (Robert Carradine) to Primal Park . A secret project mutating a primal animal using fossilized DNA, like ¨Jurassik Park¨, and some scientists resurrect one of nature\\'s most fearsome predators, the Sabretooth tiger or Smilodon . Scientific ambition turns deadly, however, and when the high voltage fence is opened the creature escape and begins savagely stalking its prey - the human visitors , tourists and scientific.Meanwhile some youngsters enter in the restricted area of the security center and are attacked by a pack of large pre-historical animals which are deadlier and bigger . In addition , a security agent (Stacy Haiduk) and her mate (Brian Wimmer) fight hardly against the carnivorous Smilodons. The Sabretooths, themselves , of course, are the real star stars and they are astounding terrifyingly though not convincing. The giant animals savagely are stalking its prey and the group run afoul and fight against one nature\\'s most fearsome predators. Furthermore a third Sabretooth more dangerous and slow stalks its victims.The movie delivers the goods with lots of blood and gore as beheading, hair-raising chills,full of scares when the Sabretooths appear with mediocre special effects.The story provides exciting and stirring entertainment but it results to be quite boring .The giant animals are majority made by computer generator and seem totally lousy .Middling performances though the players reacting appropriately to becoming food.Actors give vigorously physical performances dodging the beasts ,running,bound and leaps or dangling over walls . And it packs a ridiculous final deadly scene. No for small kids by realistic,gory and violent attack scenes . Other films about Sabretooths or Smilodon are the following : ¨Sabretooth(2002)¨by James R Hickox with Vanessa Angel, David Keith and John Rhys Davies and the much better ¨10.000 BC(2006)¨ by Roland Emmerich with with Steven Strait, Cliff Curtis and Camilla Belle. This motion picture filled with bloody moments is badly directed by George Miller and with no originality because takes too many elements from previous films. Miller is an Australian director usually working for television (Tidal wave, Journey to the center of the earth, and many others) and occasionally for cinema ( The man from Snowy river, Zeus and Roxanne,Robinson Crusoe ). Rating : Below average, bottom of barrel.\"'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,12 +156,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1004, 4000)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer = CountVectorizer( analyzer = \"word\", stop_words = 'english', max_features = 4000 ) \n",
+    "v_text = vectorizer.fit_transform(df.clean_text)\n",
+    "# Transform the sparse matrix into a dataframe\n",
+    "df_text = pd.DataFrame(v_text.todense(), columns=vectorizer.get_feature_names())\n",
+    "df_text.columns\n",
+    "\n",
+    "y = df.sentiment\n",
+    "\n",
+    "X_train, y_train, X_test, y_test = train_test_split(v_text,y, test_size=0.33)\n",
+    "\n",
+    "X_train.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,23 +203,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.817777777778\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.75151515151515147"
+       "array([[191,  28],\n",
+       "       [ 54, 177]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import roc_auc_score, accuracy_score, confusion_matrix\n",
+    "np.random.seed(888)\n",
+    "X = v_text\n",
+    "y = df.sentiment.values\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=42)\n",
+    "\n",
+    "forest = RandomForestClassifier(n_estimators = 400) \n",
+    "\n",
+    "forest.fit( X_train, y_train )\n",
+    "\n",
+    "y_hat = forest.predict(X_test)\n",
+    "\n",
+    "print(accuracy_score(y_hat, y_test))\n",
+    "confusion_matrix(y_hat, y_test)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,12 +268,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.779797979798\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[212,  53],\n",
+       "       [ 56, 174]])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "\n",
+    "vectorizer = HashingVectorizer( analyzer = \"word\", stop_words = 'english', n_features = 1000 ) \n",
+    "v_text = vectorizer.fit_transform(df.clean_text)\n",
+    "v_text\n",
+    "np.random.seed(88)\n",
+    "X = v_text\n",
+    "y = df.sentiment.values\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
+    "\n",
+    "forest = RandomForestClassifier(n_estimators = 100) \n",
+    "\n",
+    "forest.fit( X_train, y_train )\n",
+    "\n",
+    "y_hat = forest.predict(X_test)\n",
+    "\n",
+    "print(accuracy_score(y_hat, y_test))\n",
+    "confusion_matrix(y_hat, y_test)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,12 +352,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.796666666667\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[128,  27],\n",
+       "       [ 34, 111]])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "\n",
+    "vectorizer = CountVectorizer( analyzer = \"word\", stop_words = 'english', max_features = 1000 ) \n",
+    "v_text = vectorizer.fit_transform(df.clean_text)\n",
+    "# Transform the sparse matrix into a dataframe\n",
+    "\n",
+    "df_text = pd.DataFrame(v_text.todense(), columns=vectorizer.get_feature_names())\n",
+    "df_text.columns\n",
+    "\n",
+    "y = df.sentiment\n",
+    "X = v_text\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)\n",
+    "\n",
+    "nb = MultinomialNB()\n",
+    "nb.fit(X_train, y_train)\n",
+    "y_hat = nb.predict(X_test)\n",
+    "\n",
+    "print(accuracy_score(y_hat, y_test))\n",
+    "confusion_matrix(y_hat, y_test)\n"
+   ]
   },
   {
    "cell_type": "code",
