--- a/13-nlp/py/L13 N3 Text Classification.ipynb
+++ b/13-nlp/py/L13 N3 Text Classification.ipynb
@@ -108,43 +108,33 @@
     "# 2. Extract features from data\n",
     "\n",
     "Transform the *twenty_train.data* with \n",
-    "* CountVectorizer\n",
+    "\n",
+    "* [CountVectorizer](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html)\n",
+    "    * Stopwords = english\n",
+    "    * limit the vocabulary to 1000 words\n",
     "\n",
     "Then apply\n",
-    "* TfidfTransformer\n",
     "\n",
-    "Check the output"
+    "* [TfidfTransformer](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfTransformer.html)\n",
+    "\n",
+    "How do you understand the content of CountVectorizer and TfidfTransformer?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2966, 1000)"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Count words\n",
-    "count_vect = CountVectorizer(stop_words = 'english', max_features= 1000)\n",
-    "X_train_counts = count_vect.fit_transform(twenty_train.data)\n",
-    "X_train_counts.shape\n",
+    "# ...\n",
+    "# X_train_counts = \n",
     "\n",
     "# Frequency tf-idf\n",
-    "\n",
-    "tfidf_transformer = TfidfTransformer()\n",
-    "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
-    "X_train_tfidf.shape"
+    "# ...\n",
+    "# X_train_tfidf = \n"
    ]
   },
   {
@@ -153,15 +143,15 @@
    "source": [
     "# 3. Fit a model and predict some sentences\n",
     "\n",
-    "* Fit a Multinomial Model to the output of the CountVectorizer and TfidfTransformer\n",
-    "* Predict some sentences with \n",
-    "* MultinomialNB \n",
+    "* Fit a Multinomial Naive Bayes Model (MultinomialNB ) to the output of the CountVectorizer + TfidfTransformer\n",
+    "* Predict the category of some sentences\n",
     "\n",
     "For instance:\n",
     "\n",
-    "        new_sentences = ['Space the final frontier ', 'OpenGL on the GPU is fast', \n",
-    "            'I bought my new honda at the local dealer ', \n",
-    "            ]\n",
+    "        new_sentences = ['Space the final frontier  where no one has gone before', \n",
+    "                         'OpenGL on the GPU is fast', \n",
+    "                         'I bought my new honda at the local dealer ', \n",
+    "                        ]\n",
     "\n"
    ]
   },
@@ -173,29 +163,34 @@
    },
    "outputs": [],
    "source": [
-    "# Fit the model on X_train_tfidf\n",
-    "\n"
+    "# Fit the model on X_train_tfidf, twenty_train.target\n",
+    "clf = MultinomialNB()\n",
+    "\n",
+    "# ...\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "new_sentences = ['Space the final frontier ', 'OpenGL on the GPU is fast', \n",
-    "            'I bought my new honda at the local dealer ', \n",
-    "            ]\n",
-    "# Transform the sentences and predict the categories\n",
+    "new_sentences = ['Space the final frontier where no one has gone before',  'OpenGL on the GPU is fast',  'I bought my new honda at the local dealer ' ]\n",
+    "# Transform the sentences \n",
+    "# count_vectorize + tfidf transform on the new_sentences\n",
     "\n",
+    "# predict\n",
     "\n",
     "# predicted_categories = ...\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "# and print\n",
-    "for doc, category in zip(new_sentences, predicted_categories):\n",
-    "    print('%r => %s' % (doc, twenty_train.target_names[category]))"
+    "# for doc, category in zip(new_sentences, predicted_categories):\n",
+    "#     print('%r => %s' % (doc, twenty_train.target_names[category]))"
    ]
   },
   {
@@ -218,7 +213,9 @@
     "\n",
     "Fit the Pipeline on the twenty_train.train data and predict on the twenty_train.test data \n",
     "\n",
-    "Assess the prediction"
+    "Assess the performance prediction\n",
+    "\n",
+    "            np.mean(predicted == twenty_test.target)"
    ]
   },
   {
@@ -243,7 +240,7 @@
     "* alpha=1e-3\n",
     "* n_iter=5\n",
     "\n",
-    "Model assessment on test data\n",
+    "What's the accuracy on test data?\n",
     "\n"
    ]
   },
